Fix small-screen layout issues

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1102,7 +1102,7 @@ ul.results-list li { border-bottom: 1px solid #ccc; }
   }
 }
 
-@media only screen and (max-width:770px) {
+@media only screen and (max-width:900px) {
   .header-illustration.new-user-arm { display: none;}
 }
 
@@ -1560,6 +1560,11 @@ ul.results-list li { border-bottom: 1px solid #ccc; }
     &:hover {
       background: darken($lightblue, $hovercolor);
     }
+  }
+
+  .form-row {
+    margin: auto;
+    max-width: 370px;
   }
 }
 
