--- a/app/assets/stylesheets/small.css.scss
+++ b/app/assets/stylesheets/small.css.scss
@@ -255,3 +255,16 @@ p.search_results_entry {
 #message_title, #message_body {
   width: 100% !important;
 }
+
+/* Rules for the sign-up page */
+
+.user-new,
+.user-create {
+  .col6 {
+    width: 100%;
+  }
+
+  .aside {
+    display: none;
+  }
+}
